--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RegisterActivity"></activity>
+        <activity android:name=".RegisterActivity"/>
         <activity android:name=".LoginActivity" />
         <activity android:name=".Splash">
             <intent-filter>
@@ -22,7 +22,7 @@
             <intent-filter>
                 <action android:name="android.intent.action.DEFAULT" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.MAIN" />
             </intent-filter>
         </activity>
     </application>
