notifications, filters and sorting

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
             <intent-filter>
                 <action android:name="android.intent.action.DEFAULT" />
 
-                <category android:name="android.intent.category.MAIN" />,
+                <category android:name="android.intent.category.MAIN" />
 
             </intent-filter>
 
