--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
 }
 
 dependencies {
@@ -39,6 +40,9 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.github.vipulasri:timelineview:1.1.2'
+    implementation 'com.android.support:support-v4:28'
+    implementation 'com.facebook.android:facebook-android-sdk:5.8.0'
+
 
 
 }
