--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,8 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+        mavenCentral()
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.2'
@@ -28,3 +29,4 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
